css/_chat.scss
/* ... */
.sr-only {
    border: 0 !important;
    clip: rect(1px, 1px, 1px, 1px) !important;
    clip-path: inset(50%) !important;
    height: 1px !important;
    margin: -1px !important;
    overflow: hidden !important;
    padding: 0 !important;
    position: absolute !important;
    width: 1px !important;
    white-space: nowrap !important;
}

.chatmessage {
    background-color: $chatRemoteMessageBackgroundColor;
    border-radius: 0px 6px 6px 6px;
    box-sizing: border-box;
    color: white;
    margin-top: 3px;
    max-width: 100%;
    position: relative;

    &.localuser {
        background-color: $chatLocalMessageBackgroundColor;
        border-radius: 6px 0px 6px 6px;
    }

    .usermessage {
        white-space: pre-wrap;
        font-size: 14px;
    }

    &.error {
        border-radius: 0px;

        .timestamp,
        .display-name {
            display: none;
        }

        .usermessage {
            color: red;
            padding: 0;
        }
    }

    .privatemessagenotice {
        font-size: 11px;
        font-weight: 100;
    }

    .messagecontent {
        margin: 8px;
        max-width: 100%;
        overflow: hidden;
        flex-grow: 1;
    }
}

.timestamp {
    color: #757575;
}

.smiley {
    font-size: 14pt;
}

.highlight-search-text {
    background-color: rgba(255,255,0,255);
    color: rgba(0,0,0,255);
}

#smileys {
    font-size: 20pt;
    margin: auto;
    cursor: pointer;
}

#smileys img {
    width: 22px;
    padding: 2px;
}

#smileysarea {
    display: flex;
    max-height: 150px;
    min-height: 35px;
    overflow: hidden;
}

.smiley-input {
    display: flex;
    position: relative;
}

.smileys-panel {
    bottom: 100%;
    box-sizing: border-box;
    background-color: rgba(0, 0, 0, .6) !important;
    height: auto;
    display: none;
    overflow: hidden;
    position: absolute;
    width: calc(#{$sidebarWidth} - 32px);
    margin-bottom: 5px;
    margin-left: -5px;

    /**
     * CSS transitions do not apply for auto dimensions. So to produce the css
     * accordion effect for showing and hiding the smiley-panel, while allowing
     * for variable panel, height, use a very large max-height and animate off
     * of that.
     */
    transition: max-height 0.3s;

    &.show-smileys {
        display: flex;
        max-height: 500%;
    }

    #smileysContainer {
        background-color: $chatBackgroundColor;
        border-top: 1px solid $chatInputSeparatorColor;
    }
}

#smileysContainer .smiley {
    font-size: 20pt;
}

.smileyContainer {
    width: 40px;
    height: 40px;
    display: inline-block;
    text-align: center;
}

.smileyContainer:hover {
    background-color: $newToolbarButtonToggleColor;
    border-radius: 5px;
    cursor: pointer;
}

#usermsg::-webkit-scrollbar-track-piece {
    background: #3a3a3a;
}

.chat-message-group {
    display: flex;
    flex-direction: column;

    &.local {
        align-items: flex-end;

        .chatmessage {
            background-color: $chatLocalMessageBackgroundColor;
            border-radius: 6px 0px 6px 6px;

            &.privatemessage {
                background-color: $chatPrivateMessageBackgroundColor;
            }
        }

        .display-name {
            display: none;
        }

        .timestamp {
            text-align: right;
        }
    }

    &.error {
        .chatmessage {
            background-color: $defaultWarningColor;
            border-radius: 0px;
            font-weight: 100;
        }

        .display-name {
            display: none;
        }
    }

    .chatmessage-wrapper {
        max-width: 100%;

        .replywrapper {
            display: flex;
            flex-direction: row;
            align-items: center;

            .messageactions {
                align-self: stretch;
                border-left: 1px solid $chatActionsSeparatorColor;
                display: flex;
                flex-direction: column;
                justify-content: center;
                padding: 5px;

                .toolbox-icon {
                    cursor: pointer;
                    height: 32px;
                    width: 32px;
                }
            }
        }
    }

    .chatmessage {
        background-color: $chatRemoteMessageBackgroundColor;
        border-radius: 0px 6px 6px 6px;
        display: inline-block;
        margin-top: 3px;
        color: white;

        &.privatemessage {
            background-color: $chatPrivateMessageBackgroundColor;
        }
    }
}

.chat-dialog {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin-top: -5px; // Margin set by atlaskit.

    &-header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 16px;
        width: calc(100% - 32px);
        box-sizing: border-box;
        color: #fff;
        font-weight: 600;
        font-size: 24px;
        line-height: 32px;

        .jitsi-icon {
            cursor: pointer;
        }
    }

    #chatconversation {
        width: 100%;
    }
}

.touchmove-hack {
    display: flex;
    flex: 1;
    overflow: auto;
}

/**
 * Make header close button more easily tappable on mobile.
 */
.mobile-browser .chat-dialog-header .jitsi-icon {
    display: grid;
    place-items: center;
    height: 48px;
    width: 48px;
    background: #36383C;
    border-radius: 3px;
}

